sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Acceptance_Rate__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Rate__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <inlineHelpText>97% floor, manager approval to override</inlineHelpText>
    <label>Acceptance Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>