sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Account_Billing_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Country_Code__c</fullName>
    <formula>TEXT( SBQQ__Account__r.BillingCountryCode )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing Country Code</label>
    <type>Text</type>
</CustomField>