sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Account_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_State__c</fullName>
    <description>LEM-16955: It is used to capture the billing state value for the corresponding business account.</description>
    <formula>SBQQ__Account__r.BillingState</formula>
    <label>Account Billing State</label>
    <type>Text</type>
</CustomField>