sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Account_Franchise_Enrollment_Process__c.field-meta.xml
<CustomField>
    <fullName>Account_Franchise_Enrollment_Process__c</fullName>
    <description>This field is to get Franchise Owned Store count from Account over to the quote for https://doordash.atlassian.net/browse/LEM-5316</description>
    <formula>SBQQ__Account__r.Franchise_Owned_Store_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Franchise Enrollment Process</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>