sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>LEM-15348: It is used to capture the Account Name and used in Quote Slack Notification.</description>
    <formula>SBQQ__Account__r.Name</formula>
    <label>Business Account Name</label>
    <type>Text</type>
</CustomField>