sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Account_Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Account_Preferred_Language__c</fullName>
    <description>This Field is to get the Preferred Language from Account and check if it is populated on Account or not , right before contract generation</description>
    <formula>TEXT(SBQQ__Account__r.Preferred_Language__c)</formula>
    <label>Account Preferred Language</label>
    <type>Text</type>
</CustomField>