sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Account_Primary_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Account_Primary_Vertical__c</fullName>
    <formula>TEXT(SBQQ__Account__r.Primary_Vertical__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Primary Vertical</label>
    <type>Text</type>
</CustomField>