sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type__c</fullName>
    <formula>SBQQ__Account__r.Record_Type_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Record Type</label>
    <type>Text</type>
</CustomField>