sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Account_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Segment__c</fullName>
    <description>LEM-14082: It is used to store Account Segment values and is used to define the dependency of SMB specific picklist values.</description>
    <label>Account Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Segment</valueSetName>
    </valueSet>
</CustomField>