sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Activation_Bonus_Amount__c.field-meta.xml
<CustomField>
    <fullName>Activation_Bonus_Amount__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <inlineHelpText>Total amount over the term of the agreement.</inlineHelpText>
    <label>Signing Bonus Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>