sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Ads_Promos_Budget_Sum__c.field-meta.xml
<CustomField>
    <fullName>Ads_Promos_Budget_Sum__c</fullName>
    <description>LEM-2154: Sum all Budget (Budget__C) quote lines into a single total Budget Sum</description>
    <label>Ads/Promos Budget Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>