sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Alcohol_Delivery_And_Delivery_Check__c.field-meta.xml
<CustomField>
    <fullName>Alcohol_Delivery_And_Delivery_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-18455: It is used to check if Alcohol Delivery and Delivery of same package have equal requested commission.</description>
    <label>Alcohol Delivery And Delivery Check</label>
    <type>Checkbox</type>
</CustomField>