sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Alcohol_Pickup_and_Pickup_Check__c.field-meta.xml
<CustomField>
    <fullName>Alcohol_Pickup_and_Pickup_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-18455: It is used to check if Alcohol Pickup and Pickup of same package have equal requested commission.</description>
    <label>Alcohol Pickup and Pickup Check</label>
    <type>Checkbox</type>
</CustomField>