sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Alcohol_Product_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Alcohol_Product_Quantity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of LEM-17960.</description>
    <label>Alcohol Product Quantity</label>
    <type>Checkbox</type>
</CustomField>