sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Amendment_A_P_Quote__c.field-meta.xml
<CustomField>
    <fullName>Amendment_A_P_Quote__c</fullName>
    <description>LEM-15245: It is used to hide &apos;Add Products&apos; for A&amp;P Amendments.</description>
    <formula>AND(Segment__c = &apos;SMB&apos;, Opportunity_Sub_Type__c == &apos;Ads &amp; Promos&apos; , Text(SBQQ__Type__c) == &apos;Amendment&apos;)</formula>
    <label>Amendment A&amp;P Quote</label>
    <type>Checkbox</type>
</CustomField>