sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Applicable_Product_Families__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Product_Families__c</fullName>
    <description>LEM-15266: It shows the account type of the associated account.</description>
    <formula>IF(
  OR(
    TEXT(SBQQ__Account__r.Type) = $Label.Type_Franchisee,
    TEXT(Is_this_for_Ads_Promos__c) = $Label.Yes_Decision
  ),
  $Label.Ads_Promos,
  &apos;&apos;
)</formula>
    <label>Applicable Product Families</label>
    <type>Text</type>
</CustomField>