sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Applicable_to_all_Locations__c.field-meta.xml
<CustomField>
    <fullName>Applicable_to_all_Locations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <label>Applicable to all Locations</label>
    <type>Checkbox</type>
</CustomField>