sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Approval_Requested_Reason__c.field-meta.xml
<CustomField>
    <fullName>Approval_Requested_Reason__c</fullName>
    <description>LEM-15260: Field to indicate the reason for requesting approvals</description>
    <inlineHelpText>Indicates the reason for requesting approvals, this field is required when the Quote has to go via approvals</inlineHelpText>
    <label>Approval Requested Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>