sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Avoidable_Dasher_Wait_In_minutes__c.field-meta.xml
<CustomField>
    <fullName>Avoidable_Dasher_Wait_In_minutes__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <inlineHelpText>Populated as part of the Operations Metrics</inlineHelpText>
    <label>Avoidable Dasher Wait (In minutes)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>