sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Billing_Country_For_Smb__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country_Filter_For_SMB__c</fullName>
    <description>LEM-15266: It indicates the billing country code for 'SMB' quotes.</description>
    <formula>IF(Segment__c = $Label.AccountSegmentSMB,
     Account_Billing_Country_Code__c, &apos;&apos;)</formula>
    <label>Billing Country Filter For SMB</label>
    <type>Text</type>
</CustomField>