sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Brand_Activation__c.field-meta.xml
<CustomField>
    <fullName>Brand_Activation__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <label>Brand Activation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>