sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Breach_of_Contract__c.field-meta.xml
<CustomField>
    <fullName>Breach_of_Contract__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <label>Breach of Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pro-rated</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>