sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Business_Region__c.field-meta.xml
<CustomField>
    <fullName>Business_Region__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <label>Business Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SoCal</fullName>
            </value>
            <value>
                <fullName>NorCal</fullName>
            </value>
            <value>
                <fullName>NY</fullName>
            </value>
            <value>
                <fullName>Northeast</fullName>
            </value>
            <value>
                <fullName>Southeast</fullName>
            </value>
            <value>
                <fullName>Florida</fullName>
            </value>
            <value>
                <fullName>US Central Selection</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>New Zealand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>