sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Canceled_Orders__c.field-meta.xml
<CustomField>
    <fullName>Canceled_Orders__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <inlineHelpText>Populated as part of the Operations Metrics</inlineHelpText>
    <label>Canceled Orders</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>