sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Check_Delay_After_Activation_For_A_P__c.field-meta.xml
<CustomField>
    <fullName>Check_Delay_After_Activation_For_A_P__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-16645 Check Delay After Activation should not blank for A&amp;P product during New Quote</description>
    <label>Check Delay After Activation For A&amp;P</label>
    <type>Checkbox</type>
</CustomField>