sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Check_Start_Date_For_A_P_Product__c.field-meta.xml
<CustomField>
    <fullName>Check_Start_Date_For_A_P_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-16645 Check Start date should not blank for A&amp;P Product during Amendment</description>
    <label>Check Start Date For A&amp;P Product</label>
    <type>Checkbox</type>
</CustomField>