sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Co_Funded_Promo_Structure_Merchant__c.field-meta.xml
<CustomField>
    <fullName>Co_Funded_Promo_Structure_Merchant__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <label>Co-Funded Promo Structure - Merchant</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>