sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Company_Structure__c.field-meta.xml
<CustomField>
    <fullName>Company_Structure__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <inlineHelpText>Populate the company structure of the Custom Partnership</inlineHelpText>
    <label>Company Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate-owned only</fullName>
            </value>
            <value>
                <fullName>Franchisor/Franchisee only</fullName>
            </value>
            <value>
                <fullName>Corporate-owned and Franchisor/Franchisee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>