sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Conga_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Conga_Template_ID__c</fullName>
    <description>LEM-1167 : Add Generate Contract button on quote</description>
    <formula>IF(TEXT(Contract_Generation_Path__c) = &apos;Non-Templatized&apos;, NULL,
CASE(  Segment__c  ,
&quot;Enterprise&quot;, &quot;0T_003EAQ300359&quot;,
&quot;Mid-Market&quot;, &quot;0T_003EAQ300359&quot;,
&quot; &quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Template ID</label>
    <type>Text</type>
</CustomField>