sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Contract_Generation_Path__c.field-meta.xml
<CustomField>
    <fullName>Contract_Generation_Path__c</fullName>
    <description>LEM-1227: Create field to indicate Templatized vs Non-Templatized Quote Flow, LEM-16101: Help Text on Contract Generation Path</description>
    <inlineHelpText>This field represents the mode of contracting, based on whether or not standard Contract templates and automations are available to Sales users during the contracting process. If your contract needs to go through a manual Commercial Operations approval outside of Conga or Ironclad, please select “Non-Templatized”</inlineHelpText>
    <label>Contract Generation Path</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Templatized</fullName>
            </value>
            <value>
                <fullName>Non-Templatized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>