sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Contract_Signatory_Exists__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signatory_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-2587</description>
    <label>Contract Signatory Exists</label>
    <type>Checkbox</type>
</CustomField>