sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Contract_Signature_Preference__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signature_Preference__c</fullName>
    <description>LEM-16959: Determines the Contract Signature Preferences of the Mx</description>
    <inlineHelpText>Determines the Contract Signature Preferences of the Mx</inlineHelpText>
    <label>Contract Signature Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>e-Signature</fullName>
                <default>true</default>
                <label>e-Signature</label>
            </value>
            <value>
                <fullName>Paper Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>