sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Contract_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_Date__c</fullName>
    <description>LEM-179 – Date in which the related contract was signed</description>
    <label>Contract Signed Date</label>
    <type>Date</type>
</CustomField>