sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Contract_Split_Category__c.field-meta.xml
<CustomField>
    <fullName>Contract_Split_Category__c</fullName>
    <description>LEM-16229: It is used to fetch the related Contract&apos;s split category.</description>
    <formula>SBQQ__Opportunity2__r.Contract.Contract_Split_Category__c</formula>
    <label>Contract Split Category</label>
    <type>Text</type>
</CustomField>