sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Contracting_Flow__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Flow__c</fullName>
    <description>LEM-14726: Field to indicate if the redlining is required for the Contract</description>
    <inlineHelpText>Indicates if redlining is required for the CLM Contract</inlineHelpText>
    <label>Contracting Flow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Templatized e-sign</fullName>
                <default>true</default>
                <label>Templatized e-sign</label>
            </value>
            <value>
                <fullName>Templatized wet-sign</fullName>
            </value>
            <value>
                <fullName>Redlining</fullName>
            </value>
            <value>
                <fullName>No Redlining</fullName>
                <isActive>false</isActive>
                <label>No Redlining</label>
            </value>
            <value>
                <fullName>Redlining Requested</fullName>
                <isActive>false</isActive>
                <label>Redlining Requested</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>