sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Custom_Partnership_Type__c.field-meta.xml
<CustomField>
    <fullName>Custom_Partnership_Type__c</fullName>
    <description>LEM-13626: To categorize partnerships based on specific criteria defined by the product rules.</description>
    <inlineHelpText>Select if Preferred or Exclusive contract</inlineHelpText>
    <label>Custom Partnership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exclusive</fullName>
            </value>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>Preferred-2</fullName>
            </value>
            <value>
                <fullName>Standard w/Benefits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>