sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/DashPass_Exclusive_Menu_Item_Commitment__c.field-meta.xml
<CustomField>
    <fullName>DashPass_Exclusive_Menu_Item_Commitment__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <inlineHelpText>Mx will have an exclusive menu item within this many days</inlineHelpText>
    <label>DashPass Exclusive Menu Item Commitment</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>