sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Days_to_Activate_to_Qualify_for_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Activate_to_Qualify_for_Bonus__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <inlineHelpText>Days to activate to qualify for bonus</inlineHelpText>
    <label>Days to Activate to Qualify for Bonus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>