sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/DD_Promo_Benefit_Annual__c.field-meta.xml
<CustomField>
    <fullName>DD_Promo_Benefit_Annual__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <inlineHelpText>Promo dollars DD is committing to spend on the Mx</inlineHelpText>
    <label>DD Promo Benefit (Annual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>