sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Deal_Desk_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-13986: It is used to indicate if deal desk is checked or not</description>
    <label>Deal Desk Submitted</label>
    <type>Checkbox</type>
</CustomField>