sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Deck_Rank__c.field-meta.xml
<CustomField>
    <fullName>Deck_Rank__c</fullName>
    <description>LEM-13822 : Fetches the Deck Rank from Account</description>
    <formula>TEXT(SBQQ__Account__r.Deck_Rank__c)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Deck Rank</label>
    <type>Text</type>
</CustomField>