sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Default_Invoicing_To_Config_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Default_Invoicing_To_Config_Attribute__c</fullName>
    <description>LEM-18287: It is used to default Payment Method as Invoicing to Drive Products.</description>
    <label>Default Invoicing To Config Attribute</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Withholding</fullName>
            </value>
            <value>
                <fullName>Invoicing</fullName>
                <default>true</default>
                <label>Invoicing</label>
            </value>
            <value>
                <fullName>Marketing Fund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>