sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Default_Withholding_To_Config_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Default_Withholding_To_Config_Attribute__c</fullName>
    <description>LEM-14082: It is used to store the attributes related to package products and is used to default the value at product configuration screen.</description>
    <label>Default Withholding To Config Attribute</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Withholding</fullName>
                <default>true</default>
                <label>Withholding</label>
            </value>
            <value>
                <fullName>Invoicing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>