sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/DMF_Cofunding_Amount__c.field-meta.xml
<CustomField>
    <fullName>DMF_Cofunding_Amount__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <label>DMF Cofunding Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>