sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/DocuSign_Executed__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Executed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-983: Update quote status to Contract Signed upon completion of e-signature process</description>
    <inlineHelpText>The DocuSign eSignature process is complete.</inlineHelpText>
    <label>DocuSign Executed</label>
    <type>Checkbox</type>
</CustomField>