sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/DoorDash_Signer__c.field-meta.xml
<CustomField>
    <fullName>DoorDash_Signer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-1343: When Salesforce generates a Contract for a Marketing Promotion, this field captures the DoorDash User who is responsible for countersigning the agreement once signed by the Mx.</description>
    <inlineHelpText>When Salesforce generates a Contract for a Marketing Promotion, this field captures the DoorDash User who is responsible for countersigning the agreement once signed by the Mx.</inlineHelpText>
    <label>DoorDash Signer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>