sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Drive_Me_Free_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Drive_Me_Free_Frequency__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <label>Drive Me Free Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Quarter</fullName>
            </value>
            <value>
                <fullName>Per Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>