sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Drive_Me_Free_Frequency_number__c.field-meta.xml
<CustomField>
    <fullName>Drive_Me_Free_Frequency_number__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <inlineHelpText>This is the number of times per Quarter/Year</inlineHelpText>
    <label>Drive Me Free Frequency (number)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>